--- a/Front/package.json
+++ b/Front/package.json
@@ -19,10 +19,14 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "bootstrap": "^5.1.3",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.9.1",
     "merge-images": "^2.0.0",
     "object-hash": "^3.0.0",
     "rxjs": "~7.4.0",
+    "streamsaver": "^2.0.6",
     "tslib": "^2.3.0",
+    "web-streams-polyfill": "^3.2.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
