--- a/Front/package.json
+++ b/Front/package.json
@@ -18,8 +18,10 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "async": "^3.2.3",
     "bootstrap": "^5.1.3",
     "file-saver": "^2.0.5",
+    "ipfs": "^0.62.3",
     "jszip": "^3.9.1",
     "merge-images": "^2.0.0",
     "object-hash": "^3.0.0",
@@ -30,6 +32,8 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^13.1.0",
+    "@angular-builders/dev-server": "^7.3.1",
     "@angular-devkit/build-angular": "~13.1.3",
     "@angular/cli": "~13.1.3",
     "@angular/compiler-cli": "~13.1.0",
